Add query parameter to filter out reserved resources to listResources request
